adding connection string test. EntityFrameworkCore para postgres

--- a/FinanceApi.Api/appsettings.Development.json
+++ b/FinanceApi.Api/appsettings.Development.json
@@ -1,4 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "valor"
+  },
+  "Secrets": {
+    "JwtTokenSecret": "JWT local",
+    "ApiKey": "API key Local",
+    "PrivateKey": "Private Key Local"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
