--- a/FinanceApi.Api/appsettings.Development.json
+++ b/FinanceApi.Api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "valor"
+  "connectionString": {
+    "DefaultConnection": "Server=localhost;Port=5432;Database=Finance;User Id=postgres;Password=postgres;"
   },
   "Secrets": {
     "JwtTokenSecret": "JWT local",
